--- a/drivers/drivers.css
+++ b/drivers/drivers.css
@@ -31,8 +31,9 @@ form {
 }
 
 .driver-img {
-    width: 300px;
+    width: 200px;
     height: 150px;
+    padding: 20px;
 }
 
 .employer-detail {
@@ -48,7 +49,7 @@ form {
     color: #00336C;
     font-family: 'Poppins';
     font-weight: 700;
-    font-size: 20px;
+    font-size: 30px;
 }
 
 .employer-detail-cards {
