--- a/driver-details/driver-detail-each.css
+++ b/driver-details/driver-detail-each.css
@@ -2,6 +2,17 @@ body {
     margin: 0;
 }
 
+.submit-btn {
+    font-weight: 500;
+    color: #FFFFFF;
+    background-color: #3AB0FF;
+    box-shadow: 0px 0px 5px rgba(136, 136, 136, 0.5);
+    border-radius: 5px;
+    width: 120px;
+    padding: 5px;
+    text-align: center;
+}
+
 .nav {
     background-color: #FFFFFF;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
